--- a/About.html
+++ b/About.html
@@ -18,75 +18,48 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
-
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item active">
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current) </span></a>
                 </li>
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
-                        </li>
-
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="Graphicdesign.html">Graphic Design <span
-                                            class="sr-only">(current)</span></a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="Photography.html">Photography <span
-                                            class="sr-only">(current)</span</a> </li> <div class="dropdown-menu"
-                                                aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
-                        </li>
-                    </ul>
-
-
-
-                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Graphicdesign.html">Graphic Design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Photography.html">Photography </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact </a>
+                </li>
+            </ul>
+        </div>
     </nav>
+
+
 
     <img src="aboutme/image9.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
         height="1200" alt="image9">
 
     <p class="text-center"> I am Daniela Baldacchino, a 20 year ol Maltese based artist. I am currently following a
-        Digital
-        Art course. I am a multi-media aritist, where my work varies from highly detailed artworks to very
-        minimalistic. I initially started working on detailed traditional artworks, however, I have grown a passion for
-        simple digital illustrations. Art is my means of expressing my deepest thoughts and feelings, I hope to inspire
-        other people through my art.
+        Digital Art course. I am a multi-media aritist, where my work varies from highly detailed artworks to very
+        minimalistic. I initially started working on detailed traditional artworks, however, I have grown a passion
+        for simple digital illustrations. Art is my means of expressing my deepest thoughts and feelings, I hope to
+        inspire other people through my art.
     </p>
 
 
-
-
-
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
