--- a/Home.html
+++ b/Home.html
@@ -16,60 +16,35 @@
     <title>Daniela Baldacchino</title>
 </head>
 
-<body cz-shortcut-listen="true">
+<body>
 
-
-
-
-    <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
-
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current) </span></a>
+                    <a class="nav-link" href="Home.html">Home <span class="sr-only">(current) </span></a>
                 </li>
-
-
-                <div class="collapsenavbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
-                        </li>
-
-                        <div class="collapsenavbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="Graphicdesign.html">Graphic Design <span
-                                            class="sr-only">(current)</span></a>
-
-                                </li>
-
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="Photography.html">Photography <span
-                                            class="sr-only">(current)</span</a> </li> <div class="dropdown-menu"
-                                                aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item">Action</a>
-                                            <a class="dropdown-item">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item">Something else here</a>
-                        </div>
-
-                        <li class="nav-item ">
-                            <a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
-                        </li>
-                    </ul>
-
-
-
-                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Graphicdesign.html">Graphic Design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Photography.html">Photography </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact </a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <img src="websiteimages/image8.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
